# SDS-Serverless-Data-Shield

./: README.md  pyproject.toml
.github/workflows/: CI.yml
SDS/: cryptoHandler.py  newTest.py  secureContext.py  secureVar.py  test.py
SDS/sds_mem_tools/: CMakeLists.txt
SDS/sds_mem_tools/src/: main.c  memview_methods.c  memview_type.c  mpointer.c  mpointer_methods.c
SDS/sds_mem_tools/src/include/: mem_tools.h  memview.h
src/SDS_Serverless_Data_Shield/: secureVar.py
src/SDS_Serverless_Data_Shield/sds_mem_tools/src/: memview_methods.c
