[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SDS_Serverless_Data_Shield"
version = "0.1.0"
description = "Ephemeral key-based encryption for secure serverless function execution"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Scott Choo"},
  {name = "Sukyum Ahn"},
  {name = "Gyupil Ko"},
  {name = "Jaeho Lee"},

]

keywords = ["serverless", "ephemeral encryption", "memory security", "secure lambda", "data sanitization"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Security :: Cryptography",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
  "cryptography>=41.0.0",
]



[project.urls]

Repository = "https://github.com/cau-cslab/SDS-Serverless-Data-Shield"


[tool.hatch.build.targets.sdist]
include = [
  "src/SDS_Serverless_Data_Shield",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml"
]

[tool.hatch.version]
path = "src/SDS_Serverless_Data_Shield/__init__.py"
